--- a/bots/index.html
+++ b/bots/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Bots por streamer</title>
 </head>
-<body>
+<body class="m-4">
+    <div class="col-xs-12 col-md-6 d-flex">
+        <input class="form-control" placeholder="Username" id="usr">
+        <button class="btn btn-primary" id="buscar">Buscar</button>
+    </div>
+    <p id="resultado"></p>
+    <details id="List">
+        <summary>Lista de Bots</summary>
+        <div id="bots"></div>
+    </details>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
